--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-04  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation by Young-Ho Cha.
+
 2007-02-03  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
