--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-05  Artur Flinta  <aflinta@gmail.com>
+
+	* pl.po: Updated Polish translation by GNOME PL Team.
+
 2007-02-04  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Translation updated.
