--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-02-05  Alexander Larsson  <alexl@redhat.com>
+
+        * src/file-manager/fm-list-model.c:
+	Avoid ever showing "empty" while loading a subdirectory (#340495)
+	Based on patch from Christof Krüger
+
 2007-02-02  Alexander Larsson  <alexl@redhat.com>
 
 	* src/nautilus-application.c (save_session_to_file):
