--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-06  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
+	* fr.po: Updated French translation by Jonathan Ernst.
+
 2007-02-05  Artur Flinta  <aflinta@gmail.com>
 
 	* pl.po: Updated Polish translation by GNOME PL Team.
