--- a/po/fr.po
+++ b/po/fr.po
@@ -1,9 +1,9 @@
 # French translation of nautilus.
-# Copyright (C) 2000-2006 Free Software Foundation, Inc.
+# Copyright (C) 2000-2007 Free Software Foundation, Inc.
 # This file is distributed under the same license as the nautilus package.
 #
 # Jean-Michel Ardantz <jmardantz@ifrance.com>, 2000.
-# Christophe Merlet (RedFox) <redfox@redfoxcenter.org>, 2001-2006.
+# Christophe Merlet <redfox@redfoxcenter.org>, 2001-2006.
 # Christophe Fergeau <teuf@users.sourceforge.net>, 2001-2002.
 # Sébastien Bacher <seb128@debian.org>, 2004.
 # Vincent Carriere <carriere_vincent@yahoo.fr>, 2005.
@@ -11,15 +11,15 @@
 # Jonathan Ernst <jonathan@ernstfamily.ch>, 2006.
 # Christophe Bliard <christophe.bliard@trux.info>, 2006.
 # Damien Durand <splinux@fedoraproject.org>, 2006.
-# Maintainer: Stéphane Raimbault <stephane.raimbault@gmail.com>, 2007.
-# Robert-André Mauchin <zebob.m@gmail.com>, 2006-2007
+# Stéphane Raimbault <stephane.raimbault@gmail.com>, 2007.
+# Robert-André Mauchin <zebob.m@gmail.com>, 2006-2007.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: nautilus 2.15.91\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-01-27 22:34+0100\n"
-"PO-Revision-Date: 2007-01-27 22:43+0100\n"
+"POT-Creation-Date: 2007-02-06 00:03+0100\n"
+"PO-Revision-Date: 2007-02-06 00:04+0100\n"
 "Last-Translator: Robert-André Mauchin <zebob.m@gmail.com>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
 "MIME-Version: 1.0\n"
@@ -1930,7 +1930,7 @@ msgid "today at 00:00:00 PM"
 msgstr "aujourd'hui à 00:00:00"
 
 #: ../libnautilus-private/nautilus-file.c:2928
-#: ../src/nautilus-file-management-properties.c:460
+#: ../src/nautilus-file-management-properties.c:467
 msgid "today at %-I:%M:%S %p"
 msgstr "aujourd'hui à %-H:%M:%S"
 
@@ -2246,7 +2246,7 @@ msgid "Search for files by file name and file properties"
 msgstr "Rechercher des fichiers par nom et par propriétés"
 
 #: ../libnautilus-private/nautilus-global-preferences.c:146
-#: ../src/file-manager/fm-icon-container.c:536
+#: ../src/file-manager/fm-icon-container.c:512
 msgid "Icon View"
 msgstr "Vue en icônes"
 
@@ -5848,12 +5848,9 @@ msgstr "Copyright © 1999-2006 Les auteurs de Nautilus"
 #: ../src/nautilus-window-menus.c:457
 msgid "translator-credits"
 msgstr ""
-"Mainteneur :\n"
 "Stéphane Raimbault <stephane.raimbault@gmail.com>\n"
-"\n"
-"Contributeurs :\n"
 "Jean-Michel Ardantz <jmardantz@ifrance.com>\n"
-"Christophe Merlet (RedFox) <redfox@redfoxcenter.org>\n"
+"Christophe Merlet <redfox@redfoxcenter.org>\n"
 "Christophe Fergeau <teuf@users.sourceforge.net>\n"
 "Sébastien Bacher <seb128@debian.org>\n"
 "Vincent Carriere <carriere_vincent@yahoo.fr>\n"
@@ -5874,12 +5871,12 @@ msgstr "É_dition"
 #. name, stock id, label
 #: ../src/nautilus-window-menus.c:588
 msgid "_View"
-msgstr "Afficha_ge"
+msgstr "_Affichage"
 
 #. name, stock id, label
 #: ../src/nautilus-window-menus.c:589
 msgid "_Help"
-msgstr "_Aide"
+msgstr "Aid_e"
 
 #. name, stock id, label
 #. name, stock id
