--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-02-06  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-emblem-utils.c:
+	OSX build fix. (#403255)
+	Patch from dmacks@netspace.org
+
 2007-02-05  Jesse Stockall <jesse@cleverone.org>
 
        * src/file-manager/fm-directory-view.c
