--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2007-02-06  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-file-operations.c:
+        * libnautilus-private/nautilus-file.c:
+        * src/file-manager/fm-directory-view.c:
+	Capitilize "Link" in link to... names. (#314175)
+	Patch from Frederic Peters
+
+2007-02-06  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-icon-container.c:
 	Avoid translating nonvisible text. (#364466)
 
