--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-02-06  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Bump libgnome req (#404475)
+
+2007-02-06  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-file-operations.c:
         * libnautilus-private/nautilus-file.c:
         * src/file-manager/fm-directory-view.c:
