--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-07  Ihar Hrachyshka  <iharh@gnome.org>
+
+        * be.po: Updated Belarusian translation.
+
 2007-02-07  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
