--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,10 @@
+2007-02-07  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>
+
+	* ca.po: Updated Catalan translation.
+
 2007-02-07  Ihar Hrachyshka  <iharh@gnome.org>
 
-        * be.po: Updated Belarusian translation.
+	* be.po: Updated Belarusian translation.
 
 2007-02-07  Daniel Nylander <po@danielnylander.se>
 
